--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.poolName=HikariPoolBooks
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
 
 spring.liquibase.enabled=true
