--- a/src/main/resources/db/changelog/changeset/create-item-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-item-table.yaml
@@ -1,30 +1,36 @@
 databaseChangeLog:
-  - changeSet:
-      id: create_table_item
-      author: Artem Stepanov
-      changes:
-        - createTable:
-            tableName: Item
-            columns:
-              - column:
-                  name: id
-                  type: int
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-              - column:
-                  name: name
-                  type: varchar(20)
-                  constraints:
-                    nullable: false
-              - column:
-                  name: weight
-                  type: decimal
-              - column:
-                  name: rating
-                  type: decimal
-              - column:
-                  name: person_id
-                  type: int
-                  constraints:
-                    foreignKeyName: person_id
+- changeSet:
+    id: create_table_item
+    author: Artem Stepanov
+    changes:
+      - createTable:
+          tableName: item
+          columns:
+            - column:
+                name: id
+                type: int
+                autoIncrement: true
+                constraints:
+                  primaryKey: true
+            - column:
+                name: name
+                type: varchar(20)
+                constraints:
+                  nullable: false
+            - column:
+                name: weight
+                type: decimal
+                constraints:
+                  validateNullable: true
+            - column:
+                name: rating
+                type: decimal
+                constraints:
+                  validateNullable: true
+            - column:
+                name: person_id
+                type: int
+                constraints:
+                  referencedTableName: person
+                  referencedColumnNames: id
+                  foreignKeyName: fk_name
